fix(jdk17): replace List.getFirst() with get(0) in engine tests
JDK21-only List.getFirst() is not available on Java 17. Introduced by
cherry-picks of 0788a8817ec86819d851a193613a205c6e5e48e8 and
4b4d669cb4553c0e58b12ff87b5d876c5fc04763.